# mcpruntime

./: .env.example  .gitignore  .tool_cache.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  config.example.yaml  dashboard.py  docker-compose.yml  pyproject.toml  sync_upstream.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ptc-benchmark.yml
agentkernel/: __init__.py
assets/: README.md
benchmarks/: README.md  RESULTS.md  cli.py  debug.py  metrics.py  reports.py  runner.py  skill_evolution_runner.py  validators.py
benchmarks/skillsbench/: __init__.py  loader.py  metrics.py  runner.py  skill_conditions.py
benchmarks/tasks/: schema.py
benchmarks/tasks/ptc/: tasks.json
benchmarks/tasks/ptc/fixtures/: mock_mcp_client.py
client/: __init__.py  agent_helper.py  code_generator.py  monty_executor.py  opensandbox_executor.py  recursive_agent.py  skill_manager.py  tool_selector.py  validators.py
config/: loader.py  schema.py
demo/: README.md  SKILLS.md  ptc_agent.py  run_demo.py  run_demo.sh  servers.json  test-prompts.txt
demo/prompts/: agent_system.txt  agent_user.txt  sandbox_user.txt
docs/: LAUNCH.md  benchmark_analysis.md  benchmark_guide.md  examples_and_default_setup.md  skill_evolution.md
examples/: 00_simple_api_mcp.py  10_mcp_server.py  11_mcp_server_client.py  12_mcp_client_example.py  17_skill_evolution.py  README.md  mcp_client_helper.py  skill_evolution_demo.py
examples/benchmarks/: benchmark_ptc.py
extensions/: __init__.py
extensions/rlm/: __init__.py  agent.py  chunker.py
mcpruntime/: __init__.py  context_tools.py  replay_log.py  streaming.py
mcpruntime/context/: __init__.py  context_tools.py  default.py  provider.py
mcpruntime/core/: __init__.py  executor.py  filesystem_stubs.py  jwt_state_tools.py  mcp.py  mcp_proxy.py  replay_log.py  sandbox.py  server.py  streaming.py
mcpruntime/skills/: __init__.py  composer.py  ecosystem.py  extractor.py  registry.py
results/: ptc_benchmark_report.md
scripts/: README.md  check_setup.py  generate_tool_files.py  replay.py  run_test_with_logging.py  verify_setup.py
servers/api-to-mcp/: __init__.py
servers/api_to_mcp/: __init__.py
servers/basic-server-preact/: __init__.py
servers/budget-allocator-server/: __init__.py
servers/dbhub-server/: __init__.py
servers/lightrag-server/: __init__.py
servers/map-server/: __init__.py
servers/mcp-server-chart/: __init__.py
skills/: skill_index.json
tests/: conftest.py
tests/e2e/: README.md  test_live_rlm.py  test_live_vanilla.py
tests/integration/: test_benchmark_runner.py  test_recursive_agent.py
tests/misc/: test_skill_integration.py
tests/unit/: test_opensandbox_executor.py  test_skill_evolution.py
